Add perf test dependencies