@@ -52,10 +52,14 @@
              :dev {:global-vars {*warn-on-reflection* true}
                    :source-paths ["dev"]
                    :repl-options {:init-ns user, :timeout 1e6}
-                   :plugins [[lein-jmh "0.3.0"]]
+                   :jvm-opts ["-Djdk.attach.allowAttachSelf"
+                              "-XX:+UnlockDiagnosticVMOptions"
+                              "-XX:+PreserveFramePointer"
+                              "-XX:+DebugNonSafepoints"]
                    :dependencies [[ring/ring-devel "2.0.0-alpha-1" :exclusions [crypto-random commons-io]] ; `wrap-reload` ring middleware
                                   [criterium "0.4.6"] ; Basic performance test. Use clojure-jmh for repeatable mesurements.
                                   [jmh-clojure "0.4.1"] ; Clojure wrapper for Java Microbenchmark Harness.
+                                  [com.clojure-goes-fast/clj-async-profiler "1.0.0-alpha1"] ; Sampling CPU and HEAP profiler for Clojure featuring AsyncGetCallTrace + perf_events
                                   ]}
              :uberjar {:aot :all
                        :jvm-opts ["-Dclojure.compiler.disable-locals-clearing=false"
